[gd_scene load_steps=14 format=3 uid="uid://bvm05xdbq72ar"]

[ext_resource type="Script" path="res://objects/gate_key.gd" id="1_ynw1m"]
[ext_resource type="Texture2D" uid="uid://dvxr3ejyhrp53" path="res://assets/sprites/gate_key.png" id="2_qn57b"]
[ext_resource type="Texture2D" uid="uid://dnno0tubgdfv0" path="res://assets/sprites/particle2.png" id="3_yapup"]

[sub_resource type="Animation" id="Animation_ed5bc"]
resource_name = "idle"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 1), Vector2(0, 1), Vector2(0, -1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_18g65"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_puqla"]
resource_name = "obtained"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.501961, 0.501961, 0.501961, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bruic"]
_data = {
"RESET": SubResource("Animation_18g65"),
"idle": SubResource("Animation_ed5bc"),
"obtained": SubResource("Animation_puqla")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4m8uc"]

[sub_resource type="Gradient" id="Gradient_jd6a6"]
offsets = PackedFloat32Array(0.165138, 0.764526)
colors = PackedColorArray(0, 0.270588, 0.678431, 1, 0.207843, 0.654902, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_q6jks"]
gradient = SubResource("Gradient_jd6a6")

[sub_resource type="Curve" id="Curve_mdsen"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.6, 1), 0.0, 0.0, 0, 0, Vector2(0.84507, 0.600439), -3.7249, -3.7249, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_h816x"]
curve = SubResource("Curve_mdsen")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1aur2"]
lifetime_randomness = 0.1
particle_flag_disable_z = true
emission_shape_scale = Vector3(10, 6, 1)
emission_shape = 1
emission_sphere_radius = 1.2
spread = 90.0
angular_velocity_min = -200.0
angular_velocity_max = 120.0
gravity = Vector3(0, -120, 0)
radial_accel_min = -50.0
radial_accel_max = -10.0
scale_curve = SubResource("CurveTexture_h816x")
color_ramp = SubResource("GradientTexture1D_q6jks")

[node name="GateKey" type="Node2D"]
script = ExtResource("1_ynw1m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bruic")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qn57b")

[node name="KeyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KeyArea"]
shape = SubResource("CircleShape2D_4m8uc")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_1aur2")
texture = ExtResource("3_yapup")
lifetime = 0.8

[connection signal="body_entered" from="KeyArea" to="." method="_on_key_area_body_entered"]
